# shorty

./: .gitignore  Cargo.toml  Dockerfile  MIGRATION.md  Procfile  README.md  Rocket.toml  app.json  captain-definition  dev.Dockerfile  docker-compose.yml  go.mod  go.sum  prod.Dockerfile
.github/workflows/: admin-ci.yml  build.yml  format.yml  release.yml
admin/: .gitignore  README.md  index.html  package.json  vite.config.js
admin/src/: App.svelte  main.ts
admin/src/components/: LinkModal.svelte  Modal.svelte
admin/src/lib/: Modal.svelte  api.ts  stores.ts
admin/src/pages/: Login.svelte  Main.svelte
cmd/: shorty.go
migrations/2021-03-23-202018_create_links/: down.sql  up.sql
migrations/2021-03-25-213240_link_description_field/: down.sql  up.sql
pkg/config/: config.go
pkg/db/: db.go
pkg/middleware/: auth.go
scripts/: README.md
scripts/raycast/: add.py
src/: admin.rs  api.rs  attribution.rs  auth.rs  db.rs  main.rs  migrate.rs  models.rs  schema.rs  util.rs
templates/: index.html.tera  links.html.tera
