[package]
authors = ["Caleb Denio <cjdenio44@gmail.com>"]
edition = "2018"
name = "shorty"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.4.6", features = ["postgres"]}
diesel_migrations = "1.4.0"
nanoid = "0.3.0"
redis = "0.20.0"
rocket = "0.4.7"
rocket_contrib = {version = "0.4.7", default-features = false, features = ["diesel_postgres_pool", "json", "tera_templates"]}
rocket_cors = "0.5.1"
rust-embed = "5.9.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
url = "2.2.1"
